fix: complete PR 5 runtime readiness